add reset function
